# primordial

./: .editorconfig  .gitignore  CMakeLists.txt  Makefile  README.md  linker.ld  make  ok
.github/: CODEOWNERS
.github/workflows/: ci.yml
cmake/: riscv.cmake
cmd/compile/scanner/: scan.S  scan_test.S
cmd/hello/: hello.S
cmd/true/: true.S
inc/: compat.S  io.S  millicode.S  safe_str.S  slice.S  syscall.S  testing.S
inc/compile/: scanner.S
lib/entrypoint/: entrypoint.S
lib/millicode/: frame_0.S  frame_1.S  frame_10.S  frame_11.S  frame_2.S  frame_3.S  frame_4.S  frame_5.S  frame_6.S  frame_7.S  frame_8.S  frame_9.S
lib/p0/: entrypoint.S  os.S
lib/p0/ascii/: ascii.S  ascii_test.S
lib/p0/fmt/: unsigned.S
lib/p0/forever/: allocate.S  allocate_test.S
lib/p0/format/: newline.S  newline_test.S  signed.S  signed_test.S  space.S  space_test.S  string.S  string_test.S  unsigned.S  unsigned_test.S
lib/p0/io/: read.S  read_test.S  read_test.in  write.S  write_test.S  write_test.out
lib/p0/mem/: clone.S  clone_test.S  copy.S  copy_test.S  eq.S  eq_test.S  index.S  index_test.S  shortlex.S  shortlex_test.S
lib/p0/os/: exit.S
lib/p0/strintern/: strintern.S  strintern_internal_test.S
lib/testing/: testing.S
prototypes/primordial/: ast.cpp  ast.hpp  main.cpp  make  primordial.cpp  primordial.hpp  primordial.l  primordial.y  test.sh
prototypes/primordial/testdata/: bad_package_decl_lower_ID.p  bad_package_decl_no_semi.out  bad_package_decl_no_semi.p  empty_file.out  empty_package.p  import_group_0.p  import_group_1.p  import_group_1_alias.p  import_group_2.p  import_group_2_alias.p  import_group_3.p  import_group_3_alias.out  import_group_3_alias.p  import_mixed_usage.p  import_no_group_1.out  import_no_group_1.p  import_no_group_1_alias.p  import_no_group_2.p  import_no_group_2_alias.p  import_no_group_3.p  import_no_group_3_alias.p
scripts/: cloc.sh  install-toolchain.sh  make-xlen.sh  no-vcs-changes.sh  pre-commit_hook.sh  remove_multiple_trailing_newlines.sh  setup_git_hooks.sh
(+28 files in other folders)
